--- a/Ciamajda/Ciamajda/Views/Expense/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Expense/Create.cshtml
@@ -17,11 +17,12 @@
             <tr>
                 <td>@Html.LabelFor(model => model.Expense.Title) </td>
                 <td>@Html.TextBoxFor(model => model.Expense.Title) </td>
+                <td></td>
             </tr>
             <tr>
                 <td> @Html.LabelFor(model => model.Expense.Amount) </td>
                 <td>@Html.TextBoxFor(model => model.Expense.Amount) </td>
-                <td>@Html.ValidationMessageFor(model => model.Expense.Amount) </td>
+                <td>@Html.ValidationMessageFor(model => model.Expense.Amount, "", new { @style = "color:red" }) </td>
             </tr>
             <tr>
                 <td>@Html.LabelFor(model => model.Expense.CurrencyCurrency)</td>
@@ -32,34 +33,47 @@
                         new SelectListItem() {Text = "EUR", Value="EUR"},
                         new SelectListItem() {Text = "USD", Value="USD"}})
                 </td>
-                <td>@Html.ValidationMessageFor(model => model.Expense.CurrencyCurrency) </td>
+                <td>@Html.ValidationMessageFor(model => model.Expense.CurrencyCurrency, "", new { @style = "color:red" }) </td>
         </tr>
 
 
         <tr>
             <td>@Html.LabelFor(model => model.Expense.AccountId) </td>
             <td>
-                @Html.DropDownListFor(model=>model.Expense.AccountId,new SelectList(ViewBag.accountidlist,"Value","Text"))
+                @Html.DropDownListFor(model=>model.Expense.AccountId,
+                    new SelectList(ViewBag.accountidlist,"Value","Text"),
+                    "-Wybierz-",
+                    new { })
             </td>
-            <td>@Html.ValidationMessageFor(model => model.Expense.AccountId) </td>
+            <td>@Html.ValidationMessageFor(model => model.Expense.AccountId, "", new { @style = "color:red" }) </td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.CategoryId) </td>
-            <td>@Html.DropDownListFor(model => model.Expense.CategoryId, new SelectList(ViewBag.categorylist, "Value", "Text")) </td>
+            <td>@Html.DropDownListFor(model => model.Expense.CategoryId,
+                    new SelectList(ViewBag.categorylist, "Value", "Text"),
+                    "-Wybierz-",
+                    new { })
+            </td>
+            <td></td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.Place) </td>
-            <td>@Html.DropDownListFor(model => model.Expense.Place, new SelectList(ViewBag.placelist, "Value", "Text")) </td>
+            <td>@Html.DropDownListFor(model => model.Expense.Place,
+                    new SelectList(ViewBag.placelist, "Value", "Text"),
+                    "-Wybierz-",
+                    new{})
+            </td>
+            <td></td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.IsCyclical) </td>
             <td>@Html.CheckBoxFor(model => model.Expense.IsCyclical, false) </td>
-            <td>@Html.ValidationMessageFor(model => model.Expense.IsCyclical) </td>
+            <td>@Html.ValidationMessageFor(model => model.Expense.IsCyclical, "", new { @style = "color:red" }) </td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.DaysCycle) </td>
             <td>@Html.TextBoxFor(model => model.Expense.DaysCycle) </td>
-            <td>@Html.ValidationMessageFor(model => model.Expense.DaysCycle) </td>
+            <td>@Html.ValidationMessageFor(model => model.Expense.DaysCycle, "", new { @style = "color:red" }) </td>
         </tr>
         <tr>
             <td>@Html.LabelFor(model => model.Expense.CycleType) </td>
@@ -68,18 +82,21 @@
                     new SelectListItem() {Text = "Tygodniowy", Value="1"},
                     new SelectListItem() {Text = "Miesięczny", Value="2"},
                     new SelectListItem() {Text = "3-miesięczny", Value="3"},
-                    new SelectListItem() {Text = "Roczny", Value="4"}}, "-please select-",new{})
+                    new SelectListItem() {Text = "Roczny", Value="4"}}, 
+                    "-Wybierz-",
+                    new{})
             </td>
-            <td>@Html.ValidationMessageFor(model => model.Expense.CycleType) </td>
+            <td>@Html.ValidationMessageFor(model => model.Expense.CycleType, "", new { @style = "color:red" }) </td>
         </tr>    
         <tr>
             <td>@Html.LabelFor(model => model.Expense.Time) </td>
             <td>@Html.TextBoxFor(model=>model.Expense.Time, new { @id = "example1",@name="datetimepicker",@class="datetimepicker",@type="date" })
-            <td>@Html.ValidationMessageFor(model => model.Expense.Time) </td>
+            <td>@Html.ValidationMessageFor(model => model.Expense.Time, "", new { @style = "color:red" }) </td>
         </tr>
         <tr>
             <td> @Html.LabelFor(model => model.Expense.Description) </td>
             <td>@Html.TextAreaFor(model=>model.Expense.Description) </td>
+            <td></td>
         </tr>
                 <tr>
                     <td><input type="submit" value="Save" class="btn btn-default" /></td>
