--- a/Ciamajda/Ciamajda/Views/CategoryExpense/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/CategoryExpense/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Ciamajda.Models.ViewModels.CategoryExpenseViewModel
-
+    
+<h2>Kategorie wydatków</h2>
 <div>
     <a asp-action="Create">Dodaj kategorie wydatku</a>
 </div>
