--- a/Ciamajda/Ciamajda/Views/CategoryIncome/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/CategoryIncome/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Ciamajda.Models.ViewModels.CategoryIncomeViewModel
 
+<h2>Kategorie przychodów</h2>
 <div>
     <a asp-action="Create">Dodaj kategorie przychodu</a>
 </div>
