--- a/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
@@ -45,8 +45,8 @@
             <li>
                 <a>Kategorie</a>
                 <ul class="active">
-                    <li><a href="@Url.Action("Index","CategoryIncome",new { id = "Kategorie przychodów" })" class="btn btn-primary btn-lg"></a>"Kategorie przychodów"</li>
-                    <li><a href="@Url.Action("Index","CategoryExpense",new { id = "Kategorie wydatków" })" class="btn btn-primary btn-lg"></a>"Kategorie wydatków"</li>
+                    <li><a href="@Url.Action("Index","CategoryIncome",new { id = "Kategorie przychodów" })" class="btn btn-primary">Przychody</a></li>
+                    <li><a href="@Url.Action("Index","CategoryExpense",new { id = "Kategorie wydatków" })" class="btn btn-primary">Wydatki</a></li>
                 </ul>
             </li>
             <li class=""><a asp-action="">Analizy</a></li>
