--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -28,6 +28,7 @@
                 <td>Kategoria</td>
                 <td>Czas</td>
                 <td>Opis</td>
+                <td>Edytuj</td>
                 <td>Usun</td>
             </tr>
         </thead>
@@ -51,6 +52,7 @@
                             <td>@income.Time</td>
                         }
                         <td>@income.Description</td>
+                        <td><a href="@Url.Action("Edit", "income", new { id = @income.Id })" class="btn btn-primary btn-lg"><i class="fa fa-pencil-square-o"></i></a></td>
                         <td><a href="@Url.Action("Delete", "income", new { id = @income.Id })" class="btn btn-primary btn-lg"><i class="fa fa-times"></i></a></td>
 
                     </tr>
