--- a/Ciamajda/Ciamajda/Views/OurAccount/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/OurAccount/Index.cshtml
@@ -32,7 +32,7 @@
             <td>@account.Type</td> 
             <td>@account.Number</td>
             <td>@account.Balance</td>  
-            <td>@account.CreationDate</td> 
+            <td>@account.CreationDate.ToString("yyyy-MM-dd")</td> 
             <td><a href="@Url.Action("Edit", "ouraccount", new { id = @account.Id })" class="btn btn-primary btn-lg"><i class="fa fa-pencil-square-o"></i></a></td>
             <td><a href="@Url.Action("Delete", "ouraccount", new { id = @account.Id })" class="btn btn-primary btn-lg"><i class="fa fa-times"></i></a></td>
         </tr>
