--- a/Ciamajda/Ciamajda/Views/Income/Index.cshtml
+++ b/Ciamajda/Ciamajda/Views/Income/Index.cshtml
@@ -45,11 +45,11 @@
                         <td>@ViewBag.incomeviewmodel.GetCategoryName(@income.CategoryId)</td>                      
                         @if (income.Time >= DateTime.Now)
                         {
-                            <td style="color:red;">@income.Time</td>
+                            <td style="color:red;">@income.Time.ToString("yyyy-MM-dd")</td>
                         }
                         else
                         {
-                            <td>@income.Time</td>
+                            <td>@income.Time.ToString("yyyy-MM-dd")</td>
                         }
                         <td>@income.Description</td>
                         <td><a href="@Url.Action("Edit", "income", new { id = @income.Id })" class="btn btn-primary btn-lg"><i class="fa fa-pencil-square-o"></i></a></td>
