--- a/Ciamajda/Ciamajda/Views/Place/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Place/Create.cshtml
@@ -6,48 +6,55 @@
 
 
 }
-<h2>Dodaj miejsce</h2>
+<div>
+    <h4 style="text-align: center">
+        Nowe miejsce
+    </h4>
+    <hr />
+</div>
 <div align="center">
     @using (Html.BeginForm("create", "Place", FormMethod.Post))
     {
-        <table class="table">
+        <div class="col-sm-12">
+            @Html.LabelFor(model => model.Name, new { @style = "float: left;" })
+            @Html.TextBoxFor(model => model.Name, new { @style = "float: right; width: 80%;" })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @style = "color:red" })
+        </div>
 
+        <div class="col-sm-12">
+            @Html.LabelFor(model => model.Street, new { @style = "float: left;" })
+            @Html.TextBoxFor(model => model.Street, new { @style = "float: right; width: 80%;" })
+            @Html.ValidationMessageFor(model => model.Street, "", new { @style = "color:red" })
+        </div>
+        <div class="col-sm-12">
+            @Html.LabelFor(model => model.City, new { @style = "float: left;" })
+            @Html.TextBoxFor(model => model.City, new { @style = "float: right; width: 80%;" })
+            @Html.ValidationMessageFor(model => model.City, "", new { @style = "color:red" })
+        </div>
 
-            <tr>
-                <td> @Html.LabelFor(model => model.Name) </td>
-                <td>@Html.TextBoxFor(model => model.Name) </td>
-                <td>@Html.ValidationMessageFor(model => model.Name, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td> @Html.LabelFor(model => model.Street) </td>
-                <td>@Html.TextBoxFor(model => model.Street) </td>
-                <td>@Html.ValidationMessageFor(model => model.Street, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td> @Html.LabelFor(model => model.City) </td>
-                <td>@Html.TextBoxFor(model => model.City) </td>
-                <td>@Html.ValidationMessageFor(model => model.City, "", new { @style = "color:red" }) </td>
-            </tr>
-            <tr>
-                <td> @Html.LabelFor(model => model.Number) </td>
-                <td>@Html.TextBoxFor(model => model.Number) </td>
-                <td>@Html.ValidationMessageFor(model => model.Number, "", new { @style = "color:red" }) </td>
-            </tr>
-            @Html.EditorFor(model =>model.UserId)
+        <div class="col-sm-12">
+            @Html.LabelFor(model => model.Number, new { @style = "float: left;" })
+            @Html.TextBoxFor(model => model.Number, new { @style = "float: right; width: 80%;" })
+            @Html.ValidationMessageFor(model => model.Number, "", new { @style = "color:red" })
+        </div>
+        <div class="col-sm-12">
+            @Html.EditorFor(model => model.UserId)
+        </div>
 
-            <tr>
-                <td><input type="submit" value="Save" class="btn btn-default" /></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
+        <div class="col-sm-12">
+            <input type="submit" value="Save" class="btn btn-default" />
+            <a asp-action="Index" class="btn btn-default" >Anuluj</a>
+        </div>
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
+        <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">ass</span>
+            <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+        </div>
     }
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
