--- a/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
+++ b/Ciamajda/Ciamajda/Views/Shared/_menuPartial.cshtml
@@ -25,32 +25,32 @@
         <!-- Przy dodawaniu kolejnych stron patrzcie na przykład w _ManageNav.cshtml -->
         <ul id="menu" class=" nav nav-pills nav-stacked">
             <li class=""><a asp-controller="Summary" asp-action="Index">Portfel</a></li>
-            @if (ViewBag.size>0)
+            @if (ViewBag.size > 0)
             {
-            <li>
-                <a>Konta</a>
-                <ul class="active">
-                   @foreach(var element in ViewBag.AccountList)
-                    {
-                        <li><a href="@Url.Action("Details", "OurAccount", new { id = @element.Id })" class="btn btn-primary">@element.Name</a></li>
-                    }
-                </ul>
-            </li>
-           
-            <li class=""><a asp-controller="Income"  asp-action="Index">Przychody</a></li>
-            <li class=""><a asp-controller="Expense" asp-action="Index">Wydatki</a></li>
+                <li>
+                    <a>Konta</a>
+                    <ul class="active">
+                        @foreach (var element in ViewBag.AccountList)
+                        {
+                            <li><a href="@Url.Action("Details", "OurAccount", new { id = @element.Id }) " style="width: 100%" class="btn btn-primary">@element.Name</a></li>
+                        }
+                    </ul>
+                </li>
+
+                <li class=""><a asp-controller="Income" asp-action="Index">Przychody</a></li>
+                <li class=""><a asp-controller="Expense" asp-action="Index">Wydatki</a></li>
             }
             <li class=""><a asp-controller="Place" asp-action="Index">Miejsca</a></li>
             @*@<li class=""><a asp-controller="Category" asp-action="Index">Kategorie</a></li>*@
             <li>
                 <a>Kategorie</a>
                 <ul class="active">
-                    <li><a href="@Url.Action("Index","CategoryIncome",new { id = "Kategorie przychodów" })" class="btn btn-primary btn-lg"></a>"Kategorie przychodów"</li>
-                    <li><a href="@Url.Action("Index","CategoryExpense",new { id = "Kategorie wydatków" })" class="btn btn-primary btn-lg"></a>"Kategorie wydatków"</li>
+                    <li><a href="@Url.Action("Index","CategoryIncome", new { id = "Przychody" })" style="width: 100%" class="btn btn-primary">Przychody</a></li>
+                    <li><a href="@Url.Action("Index","CategoryExpense", new { id = "Wydatki" })" style="width: 100%" class="btn btn-primary">Wydatki</a></li>
                 </ul>
             </li>
-            <li class=""><a asp-action="">Analizy</a></li>
-            <li class=""><a asp-action="">Kalkulator</a></li>
+            <!--<li class=""><a asp-action="">Analizy</a></li>
+                <li class=""><a asp-action="">Kalkulator</a></li>-->
         </ul>
     </div>
 }
