--- a/Ciamajda/Ciamajda/Views/Place/Create.cshtml
+++ b/Ciamajda/Ciamajda/Views/Place/Create.cshtml
@@ -2,9 +2,6 @@
 
 @{
     ViewData["Title"] = "Create";
-
-
-
 }
 <div>
     <h4 style="text-align: center">
@@ -15,47 +12,49 @@
 <div align="center">
     @using (Html.BeginForm("create", "Place", FormMethod.Post))
     {
-        <div class="col-sm-12">
-            @Html.LabelFor(model => model.Name, new { @style = "float: left;" })
-            @Html.TextBoxFor(model => model.Name, new { @style = "float: right; width: 80%;" })
-            @Html.ValidationMessageFor(model => model.Name, "", new { @style = "color:red" })
-        </div>
+        <div>
+            <div class="col-sm-12">
+                @Html.EditorFor(model => model.UserId)
+            </div>
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Name, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Name, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Name, new { @style = "float: right; width: 90%;" })
+                </div>
+            </div>
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Street, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Street, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Street, new { @style = "float: right; width: 90%;" })
+                </div>
+            </div>
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.City, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.City, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.City, new { @style = "float: right; width: 90%;" })
+                </div>
+            </div>
 
-        <div class="col-sm-12">
-            @Html.LabelFor(model => model.Street, new { @style = "float: left;" })
-            @Html.TextBoxFor(model => model.Street, new { @style = "float: right; width: 80%;" })
-            @Html.ValidationMessageFor(model => model.Street, "", new { @style = "color:red" })
-        </div>
-        <div class="col-sm-12">
-            @Html.LabelFor(model => model.City, new { @style = "float: left;" })
-            @Html.TextBoxFor(model => model.City, new { @style = "float: right; width: 80%;" })
-            @Html.ValidationMessageFor(model => model.City, "", new { @style = "color:red" })
-        </div>
+            <div class="col-sm-12" style="padding-bottom: 5px!important;">
+                @Html.ValidationMessageFor(model => model.Number, "", new { @style = "color:red" })
+                <div>
+                    @Html.LabelFor(model => model.Number, new { @style = "float: left;" })
+                    @Html.TextBoxFor(model => model.Number, new { @style = "float: right; width: 90%;" })
+                </div>
+            </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="col-sm-12">
-            @Html.LabelFor(model => model.Number, new { @style = "float: left;" })
-            @Html.TextBoxFor(model => model.Number, new { @style = "float: right; width: 80%;" })
-            @Html.ValidationMessageFor(model => model.Number, "", new { @style = "color:red" })
-        </div>
-        <div class="col-sm-12">
-            @Html.EditorFor(model => model.UserId)
-        </div>
-
-        <div class="col-sm-12">
-            <input type="submit" value="Save" class="btn btn-default" />
-            <a asp-action="Index" class="btn btn-default" >Anuluj</a>
-        </div>
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="input-group">
-            <span class="input-group-addon" id="basic-addon1">ass</span>
-            <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+            <div class="col-sm-12" style="padding-top: 5px!important;">
+                <input type="submit" value="Save" class="btn btn-default" style="background-color: greenyellow;" />
+                <a asp-action="Index" class="btn btn-default" style="background-color: orangered;">Anuluj</a>
+            </div>
         </div>
     }
 </div>
 
-<div>
-    
-</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
